--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "@supabase/supabase-js": "^2.38.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
